feat: finish login action logic and cookie session set and expiration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "components/*": ["components/*"],
       "blocks/*": ["blocks/*"],
-      "utils/*": ["utils/*"]
+      "utils/*": ["utils/*"],
+      "services/*": ["services/*"],
     },
     "plugins": [
       {
