--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@nextui-org/react": "2.1.10",
     "autoprefixer": "10.4.15",
     "clsx": "2.0.0",
+    "date-fns": "2.30.0",
     "framer-motion": "10.16.2",
     "next": "latest",
     "postcss": "8.4.29",
