--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "clsx": "2.0.0",
     "date-fns": "2.30.0",
     "framer-motion": "10.16.2",
-    "next": "latest",
+    "next": "13.4.15",
     "postcss": "8.4.29",
     "react": "latest",
+    "react-datepicker": "4.16.0",
     "react-dom": "latest",
+    "swr": "2.2.2",
+    "tailwind-datepicker-react": "1.4.2",
     "tailwindcss": "3.3.3",
     "ts-pattern": "5.0.5",
     "valibot": "0.13.1"
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
     "typescript": "5.2.2"
   }
 }
